<resources>

    <string name="app_name">BabyProgressMap</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="middlename">Отчество</string>
    <string name="birthdate">Дата рождения</string>
    <string name="growth">Рост</string>
    <string name="weight">Вес</string>
    <string name="Apply">Применить</string>
    <string name="Ok">Ок</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="menu_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in…</string>
    <string name="error_invalid_email">Неверный почтовый адрес</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="sign_or_register">Войти или зарегистрироваться</string>  
</resources>