<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ChildrenProfileActivity" >

    <!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="match_parent" -->
    <!-- android:orientation="vertical" > -->


    <!-- </LinearLayout> -->

    <ScrollView
        android:id="@+id/activity_schildren_profile_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                style="@style/LoginFormContainer"
                android:layout_gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                style="@style/LoginFormContainer"
                android:layout_gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_surname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surname"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edit_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                style="@style/LoginFormContainer"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_middlename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/middlename"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edit_middlename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                style="@style/LoginFormContainer"
                android:layout_gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_birthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthdate"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <DatePicker
                    android:id="@+id/datePicker_birthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/button_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ok" />
        </LinearLayout>
    </ScrollView>

</merge>